OTAT-464: Add Maturity Level calculations and developing tests